# ai_sdlc_method

./: .coveragerc  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  INVENTORY.md  QUICKSTART.md  README.md  ROOCODE.md  deploy.sh  marketplace.json  package.json  pyproject.toml
.ai-workspace/: .session_assets_seen  STATUS.md
.claude/: settings.json
.claude-plugin/: marketplace.json
claude-code/: IMPLEMENTATION.yaml  README.md
codex-code/: README.md
copilot-code/: README.md
docs/: ADR_WRITING_PRINCIPLES.md  JOURNEY.md  README.md  TRACEABILITY_MATRIX.md
examples/: README.md
gemini-code/: README.md
gemini_cli/: __init__.py
genesis_core/: __init__.py
imp_claude/: QUICKSTART.md  RECOVERY_PLAN.md
imp_codex/: .gitignore  AGENTS.md  GETTING_STARTED.md  __init__.py
imp_gemini/: GEMINI.md  UPGRADE_PLAN_GEMINI_V3.md  (+2 more)
projects/eco_system/projects/temperature_converter/: CLAUDE.md  pyproject.toml
projects/eco_system/projects/temperature_converter/specification/: INTENT.md
projects/genesis_monitor/imp_fastapi/: CLAUDE.md  pyproject.toml
projects/genesis_monitor/imp_fastapi/.ai-workspace/events/: events.jsonl
projects/genesis_monitor/imp_fastapi/.ai-workspace/features/active/: REQ-F-GMON-001.yml  REQ-F-GMON-005.yml  REQ-F-MTEN-001.yml  REQ-F-NAV-001.yml  REQ-F-UX-006.yml
projects/genesis_monitor/imp_fastapi/.ai-workspace/python_fastapi_genesis/adrs/: ADR-006-dual-range-slider.md
projects/genesis_monitor/imp_fastapi/.ai-workspace/snapshots/: release_v3.3.0.json
projects/genesis_monitor/imp_fastapi/.ai-workspace/spec/: INTENT.md  REQUIREMENTS.md
projects/genesis_monitor/imp_fastapi/.ai-workspace/tasks/active/: ACTIVE_TASKS.md
projects/genesis_monitor/imp_fastapi/code/src/genesis_monitor/: __init__.py  __main__.py  config.py  index.py  registry.py  scanner.py
projects/genesis_monitor/imp_fastapi/code/src/genesis_monitor/models/: __init__.py  core.py  events.py  features.py
projects/genesis_monitor/imp_fastapi/code/src/genesis_monitor/parsers/: __init__.py  adrs.py  bootloader.py  constraints.py  events.py  features.py  reviews.py  status.py  tasks.py  topology.py  traceability.py
projects/genesis_monitor/imp_fastapi/code/src/genesis_monitor/projections/: __init__.py  compliance.py  consciousness.py  convergence.py  dimensions.py  edge_runs.py  feature_module_map.py  gantt.py  graph.py  intent_engine.py  regimes.py  sensory.py  spawn_tree.py  telem.py  temporal.py  traceability.py  tree.py
projects/genesis_monitor/imp_fastapi/code/src/genesis_monitor/server/: __init__.py  app.py  broadcaster.py  routes.py
projects/genesis_monitor/imp_fastapi/code/src/genesis_monitor/templates/: artifact.html  base.html  feature_lineage.html  index.html  project.html  timeline.html
projects/genesis_monitor/imp_fastapi/code/src/genesis_monitor/templates/fragments/: _adrs.html  _backing_docs.html  _compliance.html  _consciousness.html  _convergence.html  _dimensions.html  _edges.html  _events.html  _feature_module_map.html  _feature_trajectory.html  _features.html  _gantt.html  _graph.html  _project_list.html  _regimes.html  _reviews.html  _run_detail.html  _spawn_tree.html  _status_panel.html  _telem.html  _timeline_runs.html  _traceability.html  _tree.html  _workspace_hierarchy.html
projects/genesis_monitor/imp_fastapi/code/src/genesis_monitor/watcher/: __init__.py  observer.py
projects/genesis_monitor/imp_fastapi/design/: DESIGN.md
projects/genesis_monitor/imp_fastapi/design/adrs/: ADR-001.md  ADR-003.md  ADR-004-scalable-event-index.md  ADR-007-d3-event-trail-graph.md  ADR-008-d3-lifecycle-timeline.md  ADR-009-executor-attribution.md
projects/genesis_monitor/imp_fastapi/tests/: conftest.py  event_factory.py  repro_issue.py  test_bootloader.py  test_broadcaster.py  test_config.py  test_density.py  test_event_index.py  test_executor_attribution.py  test_gviz_tser.py  test_matrix_projections.py  test_models.py  test_nfr_dog.py  test_parsers.py  test_projections.py  test_registry.py  test_scanner.py  test_server.py  test_temporal.py  test_traceability.py  test_tree.py  test_uat_todo_lifecycle.py  test_ui_screenshots.py  test_v25_models.py  test_v25_parsers.py  test_v25_projections.py  test_v28_models.py  test_v28_parsers.py  test_v28_projections.py  test_watcher.py  test_workspace_hierarchy.py
projects/genesis_navigator/imp_react_vite/backend/: pyproject.toml
projects/genesis_navigator/imp_react_vite/backend/genesis_nav/: __init__.py  cli.py  main.py
projects/genesis_navigator/imp_react_vite/backend/genesis_nav/analyzers/: gap_analyzer.py  queue_builder.py
projects/genesis_navigator/imp_react_vite/backend/genesis_nav/models/: __init__.py  schemas.py
projects/genesis_navigator/imp_react_vite/backend/genesis_nav/readers/: __init__.py  event_reader.py  feature_reader.py  run_reader.py  state_computer.py
projects/genesis_navigator/imp_react_vite/backend/genesis_nav/routers/: __init__.py  detail.py  feature.py  gaps.py  history.py  projects.py  queue.py
projects/genesis_navigator/imp_react_vite/backend/genesis_nav/scanner/: __init__.py  project_identity.py  workspace_scanner.py
projects/genesis_navigator/imp_react_vite/backend/tests/: __init__.py  conftest.py  test_featdetail.py  test_gapengine.py  test_histengine.py  test_projdata.py  test_queueengine.py  test_scanner.py
(+2118 files in other folders)
