[project]
name = "ai-sdlc-method"
version = "2.1.0"
description = "AI SDLC Asset Graph Model — methodology validation tests"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-bdd>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["imp_claude/tests"]
norecursedirs = ["imp_claude/tests/e2e/runs"]
markers = [
    "tdd: TDD unit tests — deterministic config validation",
    "bdd: BDD acceptance tests — methodology workflow validation",
    "uat: UAT integration tests — end-to-end methodology validation",
    "e2e: E2E convergence tests — headless Claude drives full methodology (slow, requires Claude CLI)",
]

[tool.coverage.run]
omit = [
    "imp_claude/code/genesis/workspace_state.py",
]
