[project]
name = "ai-sdlc-method"
version = "2.1.0"
description = "AI SDLC Asset Graph Model — methodology validation tests"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-bdd>=7.0",
]
slow = [
    "nbformat>=5.0",
    "nbconvert>=7.0",
    "ipykernel>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["imp_claude/tests", "imp_codex/tests"]
pythonpath = ["imp_claude/code", "imp_codex/code"]
norecursedirs = ["imp_claude/tests/e2e/runs", "imp_claude/.pytest_tmp", "imp_codex/.pytest_tmp", "imp_codex/tests/e2e/runs"]
markers = [
    "tdd: TDD unit tests — deterministic config validation",
    "bdd: BDD acceptance tests — methodology workflow validation",
    "uat: UAT integration tests — end-to-end methodology validation",
    "e2e: E2E convergence tests — headless Claude drives full methodology (slow, requires Claude CLI)",
    "e2e_monitor: Monitor UI tests — Playwright validates genesis-monitor displays e2e run outputs",
    "mcp: Live actor tests — requires active Claude Code session (CLAUDE_CODE_SSE_PORT set)",
    "slow: Slow tests — require nbconvert/jupyter execution (schema_discovery)",
]
# ── Two-lane certification (ADR-019 Gap 6 / codex review 2026-03-09) ─────────
# Lane 1 — deterministic/core (no Claude CLI):
#   pytest imp_claude/tests/ -m "not e2e and not mcp" -q
#   Expected: all tdd + bdd + uat tests pass; zero Claude dependencies
#
# Lane 2 — live actor/e2e (requires Claude CLI + active session):
#   pytest imp_claude/tests/e2e/ -m "e2e or mcp" -q
#   Expected: archived-convergence + fp-dispatch tests pass
#   TestFpActorDispatch (@pytest.mark.mcp) requires CLAUDE_CODE_SSE_PORT
# ─────────────────────────────────────────────────────────────────────────────

[tool.coverage.run]
omit = [
    "imp_claude/code/genesis/workspace_state.py",
]
